Bug 317898 - KDE wallet crashed when trying to send error report 314290 - using project neon 4.10.1 so not fixed yet
Summary: KDE wallet crashed when trying to send error report 314290 - using project ne...
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.10
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-05 20:46 UTC by Simon Andric
Modified: 2013-09-02 20:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.15 KB, text/plain)
2013-05-24 19:37 UTC, Simon Andric
Details
New crash information added by DrKonqi (3.24 KB, text/plain)
2013-05-28 22:10 UTC, Simon Andric
Details
New crash information added by DrKonqi (3.37 KB, text/plain)
2013-06-16 20:29 UTC, Jaime Torres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Andric 2013-04-05 20:46:41 UTC
Application: kwalletmanager (1.10)
KDE Platform Version: 4.10.2
Qt Version: 4.8.5
Operating System: Linux 3.8.0-16-generic i686
Distribution: Ubuntu Raring Ringtail (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

KDE wallet crashed when trying to send error report 314290 - using project neon 4.10.1 so not fixed yet - cos i saw a lot similar reports which said its fixed...

i just updated to newest stuff and the crash happened in project neon...so maybe in regulad kde it doesnt but in project neon it still happens...

nice day :)
Simon

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Wallet Manager (kwalletmanager), signal: Aborted
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#7  0xb7744424 in __kernel_vsyscall ()
#8  0xb589eb1f in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#9  0xb58a20b3 in __GI_abort () at abort.c:90
#10 0xb5ba6081 in qt_message_output (msgType=QtFatalMsg, buf=0x9d40e58 "ASSERT: \"_wallet != 0\" in file /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/walletcontrolwidget.cpp, line 53") at global/qglobal.cpp:2323
#11 0xb5ba6229 in qt_message (msgType=QtFatalMsg, msg=0xb5d547d4 "ASSERT: \"%s\" in file %s, line %d", ap=0xbfda6584 "\372-\b\b\240-\b\b5") at global/qglobal.cpp:2369
#12 0xb5ba66bf in qFatal (msg=0xb5d547d4 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2552
#13 0xb5ba5c2e in qt_assert (assertion=0x8082dfa "_wallet != 0", file=0x8082da0 "/build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/walletcontrolwidget.cpp", line=53) at global/qglobal.cpp:2018
#14 0x08061789 in WalletControlWidget::onSetupWidget (this=0x9c93150) at /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/walletcontrolwidget.cpp:53
#15 0x080616ea in WalletControlWidget::WalletControlWidget (this=0x9c93150, parent=0x9c89cb0, walletName=...) at /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/walletcontrolwidget.cpp:43
#16 0x080613ef in KWalletManagerWidgetItem::KWalletManagerWidgetItem (this=0x9c92fc0, widgetParent=0x9c89cb0, walletName=...) at /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/kwalletmanagerwidgetitem.cpp:28
#17 0x080606e0 in KWalletManagerWidget::updateWalletDisplay (this=0x9c89cb0, selectWallet=...) at /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/kwalletmanagerwidget.cpp:78
#18 0x0805e4ca in KWalletManager::updateWalletDisplay (this=0xbfda67d0) at /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/kwalletmanager.cpp:196
#19 0x0805d7b1 in KWalletManager::KWalletManager (this=0xbfda67d0, parent=0x0, name=0x0, f=..., __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/kwalletmanager.cpp:95
#20 0x08063d48 in main (argc=2, argv=0xbfda68d4) at /build/buildd/project-neon-kwallet-2+git20130402+r650/src/manager/main.cpp:69

This bug may be a duplicate of or related to bug 251356, bug 316495, bug 313194.

Possible duplicates by query: bug 316495, bug 313194, bug 313047, bug 311441, bug 310887.

Reported using DrKonqi
Comment 1 Simon Andric 2013-05-24 19:37:24 UTC
Created attachment 80058 [details]
New crash information added by DrKonqi

kwalletmanager (1.10) on KDE Platform 4.10.60 using Qt 4.8.5

- What I was doing when the application crashed:

after right clicking and choosing "more actions" - special window settings - project neon crashed

after right clicking and choosing "more actions" - special window settings - project neon crashed after choosing to remember window settings and clicking OK.

This now happens always ,before it didnt at all..

nice day
Simon :)

.ps then it didnt let me send the reror report.... :( dr. konqi apeeared again...

-- Backtrace (Reduced):
#8  0xb58abb1f in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#9  0xb58af0b3 in __GI_abort () at abort.c:90
[...]
#13 0xb5bb8a3e in qt_assert (assertion=0x8082fba "_wallet != 0", file=0x8082f60 "/build/buildd/project-neon-kwallet-2+git20130519+r652/src/manager/walletcontrolwidget.cpp", line=53) at global/qglobal.cpp:2018
#14 0x080617f1 in WalletControlWidget::onSetupWidget (this=0x90f3030) at /build/buildd/project-neon-kwallet-2+git20130519+r652/src/manager/walletcontrolwidget.cpp:53
#15 0x08061752 in WalletControlWidget::WalletControlWidget (this=0x90f3030, parent=0x90da080, walletName=...) at /build/buildd/project-neon-kwallet-2+git20130519+r652/src/manager/walletcontrolwidget.cpp:43
Comment 2 Simon Andric 2013-05-28 22:10:15 UTC
Created attachment 80143 [details]
New crash information added by DrKonqi

kwalletmanager (1.10) on KDE Platform 4.10.60 using Qt 4.8.5

- What I was doing when the application crashed:

same thing...tried to sednd error report, right after typing my passowrd into kwallet and clicked open...this dr. konqi appeared...

this happened in a project neon session *and* on a clean install machine. Except for firefox & neon repositories i dont have any external ppa's in my sources.list, so all the installed packages are from saucy repository...

nice day :)


simon :)

-- Backtrace (Reduced):
#6  0x00007f88bd776037 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x00007f88bd779698 in __GI_abort () at abort.c:90
[...]
#11 0x00007f88bde9ccac in qt_assert (assertion=0x4447a2 "_wallet != 0", file=0x444748 "/build/buildd/project-neon-kwallet-2+git20130526+r653/src/manager/walletcontrolwidget.cpp", line=53) at global/qglobal.cpp:2018
#12 0x000000000041fd56 in WalletControlWidget::onSetupWidget (this=0xd94490) at /build/buildd/project-neon-kwallet-2+git20130526+r653/src/manager/walletcontrolwidget.cpp:53
#13 0x000000000041fc91 in WalletControlWidget::WalletControlWidget (this=0xd94490, parent=0xd6e9c0, walletName=...) at /build/buildd/project-neon-kwallet-2+git20130526+r653/src/manager/walletcontrolwidget.cpp:43
Comment 3 Jaime Torres 2013-06-16 20:29:00 UTC
Created attachment 80564 [details]
New crash information added by DrKonqi

kwalletmanager (1.10) on KDE Platform 4.10.80 using Qt 4.8.5

- What I was doing when the application crashed:

Just reporting new bugs, after introducing my wallet password, the dialog: kwallet is already opened, allow it once, all times.......
I just select once (or 1 time), and then the crash.

The stderr output:

ASSERT: "_wallet != 0" in file /g/kdegit/kdeutils/kwallet/src/manager/walletcontrolwidget.cpp, line 53

-- Backtrace (Reduced):
#11 0x00007f12ca311ce6 in qt_assert (assertion=<optimized out>, file=<optimized out>, line=<optimized out>) at /g/kdegit/qt/src/corelib/global/qglobal.cpp:2018
#12 0x0000000000420b43 in WalletControlWidget::onSetupWidget (this=this@entry=0x278cb20) at /g/kdegit/kdeutils/kwallet/src/manager/walletcontrolwidget.cpp:53
#13 0x0000000000420edc in WalletControlWidget::WalletControlWidget (this=0x278cb20, parent=0x277d5d0, walletName=...) at /g/kdegit/kdeutils/kwallet/src/manager/walletcontrolwidget.cpp:43
#14 0x0000000000420850 in KWalletManagerWidgetItem::KWalletManagerWidgetItem (this=0x278caf0, widgetParent=0x277d5d0, walletName=...) at /g/kdegit/kdeutils/kwallet/src/manager/kwalletmanagerwidgetitem.cpp:28
#15 0x000000000041fc8f in KWalletManagerWidget::updateWalletDisplay (this=0x277d5d0, selectWallet=...) at /g/kdegit/kdeutils/kwallet/src/manager/kwalletmanagerwidget.cpp:78
Comment 4 Valentin Rusu 2013-09-02 20:11:27 UTC
Git commit 12aced0e450fb6c1bc8fad79c3c9702a9c028e7f by Valentin Rusu.
Committed on 02/09/2013 at 20:08.
Pushed by vrusu into branch 'master'.

Adjust WalletControlWidget::onSetupWidget logic

KWalletManager should also have access to a wallet. However, cases
may be found when open operation fail. Trace it at go to a known
state, where the user should click the "open" button to re-attempt
the operation later.

M  +23   -20   src/manager/walletcontrolwidget.cpp

http://commits.kde.org/kwallet/12aced0e450fb6c1bc8fad79c3c9702a9c028e7f