Adjust WalletControlWidget::onSetupWidget logic

BUG: 317898

KWalletManager should also have access to a wallet. However, cases
may be found when open operation fail. Trace it at go to a known
state, where the user should click the "open" button to re-attempt
the operation later.